--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "eBooks:build"
+            "browserTarget": "eBooks:build",
+            "port": 9999
           },
           "configurations": {
             "production": {
