changed global with ui-global

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,8 @@
       "dom"
     ],
     "paths": {
-      "@angular-eBooks/ui-global": ["src/app/modules/global"],
-      "@angular-eBooks/ui-material-design": ["src/app/modules/ui-material-design"]
+      "@angular-eBooks/ui-global": ["src/app/modules/ui-global/index"],
+      "@angular-eBooks/ui-material-design": ["src/app/modules/ui-material-design/index"]
     }
   }
 }
