--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "json-server": "json-server --watch mocks.json --port 8080"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +26,7 @@
     "core-js": "^2.6.1",
     "firebase": "^5.7.2",
     "hammerjs": "^2.0.8",
+    "json-server": "^0.14.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
